manifests/ingress/default-ip-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ip-redirect
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://hquarter.app$request_uri
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hquarter-svc
                port:
                  number: 5000
