manifests/ingress/hquarter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hquarter-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hquarter.app
      secretName: hquarter-tls
  rules:
    - host: hquarter.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hquarter-svc
                port:
                  number: 5000
