manifests/ingress/reverse-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reverse-proxy-ingress
  namespace: reverse-proxy
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hquarter.app
      secretName: hquarter-tls
  rules:
    - host: hquarter.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-reverse
                port:
                  number: 80
    - host: tekton.hquarter.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-reverse
                port:
                  number: 80
    - host: tekton-stg.hquarter.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-reverse
                port:
                  number: 80
